fixed several bugs in dockerfiles

--- a/docker-hadoop/datanode/Dockerfile
+++ b/docker-hadoop/datanode/Dockerfile
@@ -5,8 +5,8 @@ MAINTAINER Anglada <anglada.alex@gmail.com>
 
 LABEL Description="Datanode image for hadoop cluster"
 
-ADD dn/hdfs-site.xml $HADOOP_HOME/etc/hadoop/
+ADD datanode/hdfs-site.xml $HADOOP_HOME/etc/hadoop/
 
-ADD dn/start-datanode.sh /
+ADD datanode/start-datanode.sh /
 
 CMD bash /start-datanode.sh
