--- a/docker-hadoop/nn-rm/Dockerfile
+++ b/docker-hadoop/nn-rm/Dockerfile
@@ -5,8 +5,8 @@ MAINTAINER Anglada <anglada.alex@gmail.com>
 
 LABEL Description="Namenode and resource manager image for hadoop cluster"
 
-ADD nn/hdfs-site.xml $HADOOP_HOME/etc/hadoop/
-ADD nn/start-namenode.sh /
+ADD nn-rm/hdfs-site.xml $HADOOP_HOME/etc/hadoop/
+ADD nn-rm/start-namenode.sh /
 
 CMD bash /start-namenode.sh
 
