updated datanode and namenode dockerfiles

--- a/docker-hadoop/datanode/Dockerfile
+++ b/docker-hadoop/datanode/Dockerfile
@@ -5,8 +5,11 @@ MAINTAINER Anglada <anglada.alex@gmail.com>
 
 LABEL Description="Datanode image for hadoop cluster"
 
-ADD datanode/hdfs-site.xml $HADOOP_HOME/etc/hadoop/
+RUN mkdir -p /home/hadoop/hdfs/datanode
 
+VOLUME /home/hadoop/hdfs/
+
+ADD datanode/hdfs-site.xml $HADOOP_HOME/etc/hadoop/
 ADD datanode/start-datanode.sh /
 
 CMD bash /start-datanode.sh
