--- a/docker-hadoop/nn-rm/Dockerfile
+++ b/docker-hadoop/nn-rm/Dockerfile
@@ -5,6 +5,10 @@ MAINTAINER Anglada <anglada.alex@gmail.com>
 
 LABEL Description="Namenode and resource manager image for hadoop cluster"
 
+RUN mkdir -p /home/hadoop/hdfs/namenode
+
+VOLUME /home/hadoop/hdfs/namenode
+
 ADD nn-rm/hdfs-site.xml $HADOOP_HOME/etc/hadoop/
 ADD nn-rm/start-namenode.sh /
 
