updated and still broken hadoop k8s cluster

--- a/k8s-hadoop/datanode/datanode-deployment.yaml
+++ b/k8s-hadoop/datanode/datanode-deployment.yaml
@@ -1,9 +1,10 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: datanode-deployment
 spec:
-  replicas: 1
+  serviceName: "datanode"
+  replicas: 2
   selector:
     matchLabels:
       app: datanode
@@ -15,6 +16,7 @@ spec:
       containers:
       - name: namenode
         image: raanglada/hadoop-datanode:2.9.2
+        imagePullPolicy: Always
         ports:
         - containerPort: 8030        
         - containerPort: 8031
