Updated docker-compose, starts.sh files and other files and fix namenode startup in cluster

--- a/docker-hadoop/datanode/Dockerfile
+++ b/docker-hadoop/datanode/Dockerfile
@@ -1,7 +1,7 @@
 
 From raanglada/hadoop-base:2.9.2
 
-MAINTAINER Anglada <anglada.alex@gmail.com>
+MAINTAINER Ramon Anglada <anglada.alex@gmail.com>
 
 LABEL Description="Datanode image for hadoop cluster"
 
@@ -9,7 +9,7 @@ RUN mkdir -p /home/hadoop/hdfs/datanode
 
 VOLUME /home/hadoop/hdfs/
 
-ADD datanode/hdfs-site.xml $HADOOP_HOME/etc/hadoop/
-ADD datanode/start-datanode.sh /
+COPY datanode/hdfs-site.xml $HADOOP_HOME/etc/hadoop/
+COPY datanode/start-datanode.sh /
 
 CMD bash /start-datanode.sh
