--- a/docker-hadoop/nn-rm/Dockerfile
+++ b/docker-hadoop/nn-rm/Dockerfile
@@ -1,7 +1,7 @@
 
 From raanglada/hadoop-base:2.9.2
 
-MAINTAINER Anglada <anglada.alex@gmail.com>
+MAINTAINER Ramon Anglada <anglada.alex@gmail.com>
 
 LABEL Description="Namenode and resource manager image for hadoop cluster"
 
@@ -9,8 +9,8 @@ RUN mkdir -p /home/hadoop/hdfs/namenode
 
 VOLUME /home/hadoop/hdfs/namenode
 
-ADD nn-rm/hdfs-site.xml $HADOOP_HOME/etc/hadoop/
-ADD nn-rm/start-namenode.sh /
+COPY nn-rm/hdfs-site.xml $HADOOP_HOME/etc/hadoop/
+COPY nn-rm/start-namenode.sh /
 
 CMD bash /start-namenode.sh
 
