--- a/docker-hadoop/docker-compose.yaml
+++ b/docker-hadoop/docker-compose.yaml
@@ -1,21 +1,38 @@
 version: '3'
 services:
   namenode:
+    container_name: namenode
     build:
       context: .      
       dockerfile: ./nn-rm/Dockerfile 
-    image: raanglada/hadoop-namenode    
+    image: raanglada/hadoop-namenode:2.9.2    
     restart: always
+    extra_hosts:    
+      - "namenode:192.168.0.10"
+    networks:
+      hadoop-network:
+        ipv4_address: 192.168.0.10
     ports:
-      - 50070:50070
-      - 8088:8088 
-      - 19888:1988  
+      - "8088:8088"
+      - "50070:50070"      
+      - "19888:19888"
+      - "9000:9000"
 
-  datanode:
+  datanode:    
     build:
       context: .
-      dockerfile: ./datanode/Dockerfile
-    image: raanglada/hadoop-datanode    
-    restart: always    
+      dockerfile: namenode./datanode/Dockerfile
+    image: raanglada/hadoop-datanode:2.9.2    
+    restart: always
+    networks:
+      hadoop-network:
+    extra_hosts:    
+      - "namenode:192.168.0.10"
       
-    
+networks:
+  hadoop-network:
+    driver: bridge
+    ipam:      
+      config:
+        - subnet: "192.168.0.0/16"          
+
