--- a/docker-hadoop/datanode/Dockerfile
+++ b/docker-hadoop/datanode/Dockerfile
@@ -1,5 +1,5 @@
 
-From raanglada/hadoop-base:2.9.2
+FROM raanglada/hadoop-base:2.9.2
 
 MAINTAINER Ramon Anglada <anglada.alex@gmail.com>
 
@@ -7,9 +7,10 @@ LABEL Description="Datanode image for hadoop cluster"
 
 RUN mkdir -p /home/hadoop/hdfs/datanode
 
-VOLUME /home/hadoop/hdfs/
-
 COPY datanode/hdfs-site.xml $HADOOP_HOME/etc/hadoop/
+COPY datanode/yarn-site.xml $HADOOP_HOME/etc/hadoop/
 COPY datanode/start-datanode.sh /
+
+VOLUME /home/hadoop/hdfs/
 
 CMD bash /start-datanode.sh
