--- a/k8s-hadoop/datanode/datanode-deployment.yaml
+++ b/k8s-hadoop/datanode/datanode-deployment.yaml
@@ -1,34 +1,18 @@
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
   name: datanode-deployment
-spec:
-  serviceName: "datanode"
-  replicas: 2
+spec:  
+  replicas: 1
   selector:
     matchLabels:
       app: datanode
   template:
     metadata:
       labels:
-        app: datanode
+        app: datanode 
     spec:      
       containers:
       - name: namenode
         image: raanglada/hadoop-datanode:2.9.2
-        imagePullPolicy: Always
-        ports:
-        - containerPort: 8030        
-        - containerPort: 8031
-        - containerPort: 8032
-        - containerPort: 8033
-        - containerPort: 8040
-        - containerPort: 8042
-
-        # resources:
-        #   requests:
-        #     memory: "1024Mi"
-        #     cpu: "25m"
-        #   limits:
-        #     memory: "2048Mi"
-        #     cpu: "50m"
+        imagePullPolicy: IfNotPresent
