--- a/k8s-hadoop/resource-manager/yarn-rm-service.yaml
+++ b/k8s-hadoop/resource-manager/yarn-rm-service.yaml
@@ -1,30 +1,37 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: namenode  
+  name: yarn  
 spec:
   type: NodePort
   ports:
   - name: ssh-access
     port: 22
     targetPort: 22    
-  - name: access-namenode
-    port: 9000
-    targetPort: 9000
-  - name: dashboard
-    port: 50070
-    targetPort: 50070
   - name: yarn-access
     port: 8088
     targetPort: 8088
   - name: access-jobhistory
     port: 19888
     targetPort: 19888
-  - name: access-nodemanagers
+  - name: access-rm-1
+    port: 8030
+    targetPort: 8030
+  - name: access-rm-2
     port: 8031
     targetPort: 8031
+  - name: access-rm-3
+    port: 8032
+    targetPort: 8032
+  - name: access-rm-4
+    port: 8033
+    targetPort: 8033
+  - name: access-rm-5
+    port: 8090
+    targetPort: 8090
+
   selector:
-    app: namenode-app
+    app: yarn-rm-app
 
 
 
